# dtdb

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  docker-compose.env  docker-compose.yml
identifier_prefix/: Cargo.toml
identifier_prefix/src/: lib.rs
migrations/2023-05-17-203022_create_accounts/: up.sql
migrations/2023-05-18-012450_create_media/: up.sql
migrations/2023-05-18-023426_create_seasons/: up.sql
migrations/2023-05-18-043348_create_shows/: down.sql  up.sql
migrations/2023-05-18-174107_create_people/: up.sql
migrations/2023-05-18-193233_create_worked_on/: down.sql  up.sql
migrations/2023-05-18-204223_create_tagged_in/: down.sql  up.sql
migrations/2023-05-19-032153_create_profile_claimed/: down.sql  up.sql
migrations/2023-05-19-035403_create_ec_tables/: down.sql  up.sql
migrations/2023-05-19-172712_create_awards/: up.sql
migrations/2023-06-14-045044_set_seasons_not_null/: down.sql  up.sql
src/: application.rs  config.rs  lib.rs  routes.rs  util.rs  view.rs
src/data/: identifiers.rs  mod.rs  schema.rs
src/data/models/: account.rs  any.rs  award.rs  ec_term.rs  media.rs  mod.rs  person.rs  profile_claimed.rs  season.rs  show.rs  tagged_in.rs  worked_on.rs
src/handlers/: mod.rs  seasons.rs  toaster.rs
src/view/: mod.rs
src/view/helpers/: url.rs
views/layouts/: _base.tera.html  main.tera.html
views/pages/: toaster.tera.html
views/pages/seasons/: list.tera.html  show.tera.html  single.tera.html
