[package]
name = "dtdb"
version = "0.1.0"
edition = "2021"


# Build Targets

[lib]
name = "dtdb"
path = "src/lib.rs"

[[bin]]
name = "generate-seasons"
path = "bin/generate-seasons.rs"


# Dependencies

[dependencies]

include_dir = "0.7.3"
tera = "1"
serde = {version = "1", features = ["derive"]}
rand = "0.8.5"
identifier_prefix = {path = "./identifier_prefix"}
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
chrono = "0.4.24"
dotenvy = "0.15"
ordinal = "0.3.2"


# Workspace Setup

[workspace]

members = [
  "identifier_prefix"
]