[package]
name = "dtdb"
version = "0.1.0"
edition = "2021"
default-run = "server"


# Build Targets

[lib]
name = "dtdb"
path = "src/lib.rs"

[[bin]]
name = "generate-seasons"
path = "bin/generate-seasons.rs"

[[bin]]
name = "server"
path = "bin/server.rs"


# Dependencies

[dependencies]

include_dir = "0.7.3"
tera = "1"
serde = {version = "1", features = ["derive"]}
rand = "0.8.5"
identifier_prefix = {path = "./identifier_prefix"}
diesel = { version = "2.0.0", features = ["postgres", "chrono", "r2d2"] }
chrono = "0.4.24"
dotenvy = "0.15"
ordinal = "0.3.2"
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
hyperlocal = "0.8"
clap = { version = "4.3.0", features = ["derive"] }
json5 = "0.4.1"
log4rs = "1.2.0"
log = "0.4.17"
anyhow = "1.0"
serde_json = "1.0.97"

# Workspace Setup

[workspace]

members = [
  "identifier_prefix"
]
